k8s/overlays/staging/patches/remove-ingress.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
